# stltree

./: README.md  pyproject.toml  requirements.txt  stltree.py
benchmarks/: paper_benchmarks.py  run_bench.py
stl_consistency/: abstract_syntax_table.py  local_solver.py  node.py  parser.py  qsmtchecker.py  smtchecker.py  tableau.py
tests/: test_parser.py  test_qsmtchecker.py  test_smtchecker.py  test_tableau.py
